--- a/ClassLibrary1/Person.csproj
+++ b/ClassLibrary1/Person.csproj
@@ -43,6 +43,16 @@
     <Compile Include="Client.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Banking\Banking.csproj">
+      <Project>{4099f399-1ed4-43b6-ace2-61c2705d599e}</Project>
+      <Name>Banking</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Corporation\Corporation.csproj">
+      <Project>{0503b940-333d-4403-9d70-feea5084757e}</Project>
+      <Name>Corporation</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
